# PyMCPfy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: configuration.md  contributing.md  getting_started.md  index.md
examples/django_example/: requirements.txt  views.py
examples/django_example/management/commands/: runserver_mcp.py
examples/django_example/userapi/: settings.py  urls.py
examples/django_example/users/: models.py  serializers.py  urls.py  views.py
examples/fastapi_example/: README.md  app.py  requirements.txt
examples/flask_example/: README.md  app.py  requirements.txt
pymcpfy/: __init__.py  config.py
pymcpfy/core/: __init__.py  mcp_protocol.py  schema_generator.py
pymcpfy/core/transport/: __init__.py  base_transport.py  http_transport.py  websocket_transport.py
pymcpfy/django/: __init__.py
pymcpfy/fastapi/: __init__.py
pymcpfy/flask/: __init__.py
tests/: test_config.py
tests/core/: test_mcp_protocol.py  test_schema_generator.py
