[project]
name = "pymcpfy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=22.0.0",
    "django>=3.2.0",
    "fastapi>=0.68.0",
    "flake8>=4.0.0",
    "flask>=2.0.0",
    "flask-sqlalchemy>=3.1.1",
    "isort>=5.0.0",
    "mcp[cli]>=0.1.0",
    "mypy>=0.9.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "uvicorn>=0.15.0",
]
